--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "NODE_OPTIONS=--experimental-global-webcrypto concurrently \"vite\" \"tsx watch src/server/index.ts\"",
+    "dev": "concurrently \"vite\" \"tsx watch src/server/index.ts\"",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
